# mediasoup-test

./: .gitignore  README.md  compose.yml  setup.sh
backend/: .dockerignore  .env  .env.docker  .gitignore  Cargo.toml  Dockerfile  run.sh
backend/profiles/: input-h264.sdp
backend/src/: main.rs  participant.rs  recording.rs  room.rs  rooms_registry.rs  util.rs
backend/src/participant/: messages.rs
frontend/: .dockerignore  .env  .env.docker  .gitignore  Dockerfile  package.json  svelte.config.js  vite.config.ts
frontend/src/: App.svelte  app.html
frontend/src/@types/: index.d.ts
frontend/src/component/: index.ts
frontend/src/component/Button/: +page.svelte
frontend/src/component/CircularProgress/: +page.svelte
frontend/src/component/Dialog/: +page.svelte
frontend/src/component/DivButton/: +page.svelte
frontend/src/component/Header/: +page.svelte
frontend/src/component/Logo/: +page.svelte
frontend/src/component/Pagination/: +page.svelte
frontend/src/context/: ClientSettingProvider.svelte  NameProvider.svelte  ServerSettingProvider.svelte
frontend/src/lib/: api.ts  text.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/rooms/: +page.svelte  JoinSettingDialog.svelte  SetNameDialog.svelte  VideoList.svelte
frontend/src/util/: domEvents.ts  loadingGuard.ts
