[package]
name = "mediasoup-test-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
async-lock = "2.7.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
event-listener-primitives = "2.0.1"
futures-lite = "1.13.0"
log = "0.4.20"
mediasoup = "0.11.4"
parking_lot = "0.12.1"
regex = { version = "1.8.4", features = ["std", "perf"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = "1.33.0"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
url = "2.4.1"